fixed about page not showing up when user is logged in

--- a/front-end/src/components/navbar/navbar.css
+++ b/front-end/src/components/navbar/navbar.css
@@ -1,6 +1,6 @@
 nav {
   display: flex;
-  gap: 10vw;
+  gap: 8vw;
   width: 97.1vw;
   border: 1px solid black;
   justify-content: center;
